--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="" style="font-size: 20px; color: red;">hellu</div>
+  <div class="" style="display: none;"></div>
 </body>
 </html>
